kubernetes/apps/components/copyparty/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
  labels:
    app: copyparty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: copyparty
  template:
    metadata:
      labels:
        app: copyparty
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: copyparty
          image: docker.io/copyparty/dj:1.20.21@sha256:c94e99d2d0302e83ea0c25977fa8af9861ce41a805ec618084ab24614fcb0fb5
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 3923
              name: http
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /cfg
            - name: copyparty-configmap
              mountPath: /cfg/copyparty.conf
              subPath: copyparty.conf
            - name: data
              mountPath: /w

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: copyparty-configmap
          configMap:
            name: copyparty-configmap
