kubernetes/apps/components/copyparty/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty
spec:
  type: ClusterIP
  selector:
    app: copyparty
  ports:
    - name: web
      port: 3923
